added classes that match border-top-color: green and blue

--- a/AcSS/utils.css
+++ b/AcSS/utils.css
@@ -837,7 +837,7 @@
 .BORDERALLDASHEDGREY32, .BADAG32,
 .BORDERALLDASHEDGREY33, .BADAG33,
 .BORDERALLDASHEDGREY34, .BADAG34,
-.BORDERALLDASHEDGREY35, .BADAG35,
+.BORDERALLDASHEDGREY35, .BADAG35
 {
     border-top-style: dashed;
 }
@@ -930,7 +930,7 @@
 .BORDERALLDOUBLEGREY32, .BADOG32,
 .BORDERALLDOUBLEGREY33, .BADOG33,
 .BORDERALLDOUBLEGREY34, .BADOG34,
-.BORDERALLDOUBLEGREY35, .BADOG35,
+.BORDERALLDOUBLEGREY35, .BADOG35
 {
     border-top-style: double;
 }
@@ -1023,7 +1023,7 @@
 .BORDERALLDOTTEDGREY32, .BADTG32,
 .BORDERALLDOTTEDGREY33, .BADTG33,
 .BORDERALLDOTTEDGREY34, .BADTG34,
-.BORDERALLDOTTEDGREY35, .BADTG35,
+.BORDERALLDOTTEDGREY35, .BADTG35
 {
     border-top-style: dotted;
 }
@@ -1116,7 +1116,7 @@
 .BORDERALLSOLIDGREY32, .BASOG32,
 .BORDERALLSOLIDGREY33, .BASOG33,
 .BORDERALLSOLIDGREY34, .BASOG34,
-.BORDERALLSOLIDGREY35, .BASOG35,
+.BORDERALLSOLIDGREY35, .BASOG35
 {
     border-top-style: solid;
 }
@@ -1141,46 +1141,370 @@
 .BORDERTOPSOLIDRED3, .BTSOR3,
 .BORDERTOPSOLIDRED4, .BTSOR4,
 .BORDERTOPSOLIDRED5, .BTSOR5,
+.BORDERALLDASHEDRED1, .BADAR1,
+.BORDERALLDASHEDRED2, .BADAR2,
+.BORDERALLDASHEDRED3, .BADAR3,
+.BORDERALLDASHEDRED4, .BADAR4,
+.BORDERALLDASHEDRED5, .BADAR5,
+.BORDERALLDOUBLERED1, .BADOR1,
+.BORDERALLDOUBLERED2, .BADOR2,
+.BORDERALLDOUBLERED3, .BADOR3,
+.BORDERALLDOUBLERED4, .BADOR4,
+.BORDERALLDOUBLERED5, .BADOR5,
+.BORDERALLDOTTEDRED1, .BADTR1,
+.BORDERALLDOTTEDRED2, .BADTR2,
+.BORDERALLDOTTEDRED3, .BADTR3,
+.BORDERALLDOTTEDRED4, .BADTR4,
+.BORDERALLDOTTEDRED5, .BADTR5,
+.BORDERALLSOLIDRED1, .BASOR1,
+.BORDERALLSOLIDRED2, .BASOR2,
+.BORDERALLSOLIDRED3, .BASOR3,
+.BORDERALLSOLIDRED4, .BASOR4,
+.BORDERALLSOLIDRED5, .BASOR5,
 {
     border-top-color: #FF0000;
 }
-
-
+.BORDERTOPDASHEDGREEN1, .BTDAG1,
+.BORDERTOPDASHEDGREEN2, .BTDAG2,
+.BORDERTOPDASHEDGREEN3, .BTDAG3,
+.BORDERTOPDASHEDGREEN4, .BTDAG4,
+.BORDERTOPDASHEDGREEN5, .BTDAG5,
+.BORDERTOPDOUBLEGREEN1, .BTDOG1,
+.BORDERTOPDOUBLEGREEN2, .BTDOG2,
+.BORDERTOPDOUBLEGREEN3, .BTDOG3,
+.BORDERTOPDOUBLEGREEN4, .BTDOG4,
+.BORDERTOPDOUBLEGREEN5, .BTDOG5,
+.BORDERTOPDOTTEDGREEN1, .BTDTG1,
+.BORDERTOPDOTTEDGREEN2, .BTDTG2,
+.BORDERTOPDOTTEDGREEN3, .BTDTG3,
+.BORDERTOPDOTTEDGREEN4, .BTDTG4,
+.BORDERTOPDOTTEDGREEN5, .BTDTG5,
+.BORDERTOPSOLIDGREEN1, .BTSOG1,
+.BORDERTOPSOLIDGREEN2, .BTSOG2,
+.BORDERTOPSOLIDGREEN3, .BTSOG3,
+.BORDERTOPSOLIDGREEN4, .BTSOG4,
+.BORDERTOPSOLIDGREEN5, .BTSOG5,
+.BORDERALLDASHEDGREEN1, .BADAG1,
+.BORDERALLDASHEDGREEN2, .BADAG2,
+.BORDERALLDASHEDGREEN3, .BADAG3,
+.BORDERALLDASHEDGREEN4, .BADAG4,
+.BORDERALLDASHEDGREEN5, .BADAG5,
+.BORDERALLDOUBLEGREEN1, .BADOG1,
+.BORDERALLDOUBLEGREEN2, .BADOG2,
+.BORDERALLDOUBLEGREEN3, .BADOG3,
+.BORDERALLDOUBLEGREEN4, .BADOG4,
+.BORDERALLDOUBLEGREEN5, .BADOG5,
+.BORDERALLDOTTEDGREEN1, .BADTG1,
+.BORDERALLDOTTEDGREEN2, .BADTG2,
+.BORDERALLDOTTEDGREEN3, .BADTG3,
+.BORDERALLDOTTEDGREEN4, .BADTG4,
+.BORDERALLDOTTEDGREEN5, .BADTG5,
+.BORDERALLSOLIDGREEN1, .BASOG1,
+.BORDERALLSOLIDGREEN2, .BASOG2,
+.BORDERALLSOLIDGREEN3, .BASOG3,
+.BORDERALLSOLIDGREEN4, .BASOG4,
+.BORDERALLSOLIDGREEN5, .BASOG5,
 {
     border-top-color: #00FF00;
 }
-
-
+.BORDERTOPDASHEDBLUE1, .BTDAB1,
+.BORDERTOPDASHEDBLUE2, .BTDAB2,
+.BORDERTOPDASHEDBLUE3, .BTDAB3,
+.BORDERTOPDASHEDBLUE4, .BTDAB4,
+.BORDERTOPDASHEDBLUE5, .BTDAB5,
+.BORDERTOPDOUBLEBLUE1, .BTDOB1,
+.BORDERTOPDOUBLEBLUE2, .BTDOB2,
+.BORDERTOPDOUBLEBLUE3, .BTDOB3,
+.BORDERTOPDOUBLEBLUE4, .BTDOB4,
+.BORDERTOPDOUBLEBLUE5, .BTDOB5,
+.BORDERTOPDOTTEDBLUE1, .BTDTB1,
+.BORDERTOPDOTTEDBLUE2, .BTDTB2,
+.BORDERTOPDOTTEDBLUE3, .BTDTB3,
+.BORDERTOPDOTTEDBLUE4, .BTDTB4,
+.BORDERTOPDOTTEDBLUE5, .BTDTB5,
+.BORDERTOPSOLIDBLUE1, .BTSOB1,
+.BORDERTOPSOLIDBLUE2, .BTSOB2,
+.BORDERTOPSOLIDBLUE3, .BTSOB3,
+.BORDERTOPSOLIDBLUE4, .BTSOB4,
+.BORDERTOPSOLIDBLUE5, .BTSOB5,
+.BORDERALLDASHEDBLUE1, .BADAB1,
+.BORDERALLDASHEDBLUE2, .BADAB2,
+.BORDERALLDASHEDBLUE3, .BADAB3,
+.BORDERALLDASHEDBLUE4, .BADAB4,
+.BORDERALLDASHEDBLUE5, .BADAB5,
+.BORDERALLDOUBLEBLUE1, .BADOB1,
+.BORDERALLDOUBLEBLUE2, .BADOB2,
+.BORDERALLDOUBLEBLUE3, .BADOB3,
+.BORDERALLDOUBLEBLUE4, .BADOB4,
+.BORDERALLDOUBLEBLUE5, .BADOB5,
+.BORDERALLDOTTEDBLUE1, .BADTB1,
+.BORDERALLDOTTEDBLUE2, .BADTB2,
+.BORDERALLDOTTEDBLUE3, .BADTB3,
+.BORDERALLDOTTEDBLUE4, .BADTB4,
+.BORDERALLDOTTEDBLUE5, .BADTB5,
+.BORDERALLSOLIDBLUE1, .BASOB1,
+.BORDERALLSOLIDBLUE2, .BASOB2,
+.BORDERALLSOLIDBLUE3, .BASOB3,
+.BORDERALLSOLIDBLUE4, .BASOB4,
+.BORDERALLSOLIDBLUE5, .BASOB5,
 {
     border-top-color: #0000FF;
 }
-
-
+.BORDERTOPDASHEDRED1, .BTDAR1,
+.BORDERTOPDASHEDRED2, .BTDAR2,
+.BORDERTOPDASHEDRED3, .BTDAR3,
+.BORDERTOPDASHEDRED4, .BTDAR4,
+.BORDERTOPDASHEDRED5, .BTDAR5,
+.BORDERTOPDOUBLERED1, .BTDOR1,
+.BORDERTOPDOUBLERED2, .BTDOR2,
+.BORDERTOPDOUBLERED3, .BTDOR3,
+.BORDERTOPDOUBLERED4, .BTDOR4,
+.BORDERTOPDOUBLERED5, .BTDOR5,
+.BORDERTOPDOTTEDRED1, .BTDTR1,
+.BORDERTOPDOTTEDRED2, .BTDTR2,
+.BORDERTOPDOTTEDRED3, .BTDTR3,
+.BORDERTOPDOTTEDRED4, .BTDTR4,
+.BORDERTOPDOTTEDRED5, .BTDTR5,
+.BORDERTOPSOLIDRED1, .BTSOR1,
+.BORDERTOPSOLIDRED2, .BTSOR2,
+.BORDERTOPSOLIDRED3, .BTSOR3,
+.BORDERTOPSOLIDRED4, .BTSOR4,
+.BORDERTOPSOLIDRED5, .BTSOR5,
+.BORDERALLDASHEDRED1, .BADAR1,
+.BORDERALLDASHEDRED2, .BADAR2,
+.BORDERALLDASHEDRED3, .BADAR3,
+.BORDERALLDASHEDRED4, .BADAR4,
+.BORDERALLDASHEDRED5, .BADAR5,
+.BORDERALLDOUBLERED1, .BADOR1,
+.BORDERALLDOUBLERED2, .BADOR2,
+.BORDERALLDOUBLERED3, .BADOR3,
+.BORDERALLDOUBLERED4, .BADOR4,
+.BORDERALLDOUBLERED5, .BADOR5,
+.BORDERALLDOTTEDRED1, .BADTR1,
+.BORDERALLDOTTEDRED2, .BADTR2,
+.BORDERALLDOTTEDRED3, .BADTR3,
+.BORDERALLDOTTEDRED4, .BADTR4,
+.BORDERALLDOTTEDRED5, .BADTR5,
+.BORDERALLSOLIDRED1, .BASOR1,
+.BORDERALLSOLIDRED2, .BASOR2,
+.BORDERALLSOLIDRED3, .BASOR3,
+.BORDERALLSOLIDRED4, .BASOR4,
+.BORDERALLSOLIDRED5, .BASOR5,
 {
     border-top-color: #FFFF00;
 }
-
-
+.BORDERTOPDASHEDRED1, .BTDAR1,
+.BORDERTOPDASHEDRED2, .BTDAR2,
+.BORDERTOPDASHEDRED3, .BTDAR3,
+.BORDERTOPDASHEDRED4, .BTDAR4,
+.BORDERTOPDASHEDRED5, .BTDAR5,
+.BORDERTOPDOUBLERED1, .BTDOR1,
+.BORDERTOPDOUBLERED2, .BTDOR2,
+.BORDERTOPDOUBLERED3, .BTDOR3,
+.BORDERTOPDOUBLERED4, .BTDOR4,
+.BORDERTOPDOUBLERED5, .BTDOR5,
+.BORDERTOPDOTTEDRED1, .BTDTR1,
+.BORDERTOPDOTTEDRED2, .BTDTR2,
+.BORDERTOPDOTTEDRED3, .BTDTR3,
+.BORDERTOPDOTTEDRED4, .BTDTR4,
+.BORDERTOPDOTTEDRED5, .BTDTR5,
+.BORDERTOPSOLIDRED1, .BTSOR1,
+.BORDERTOPSOLIDRED2, .BTSOR2,
+.BORDERTOPSOLIDRED3, .BTSOR3,
+.BORDERTOPSOLIDRED4, .BTSOR4,
+.BORDERTOPSOLIDRED5, .BTSOR5,
+.BORDERALLDASHEDRED1, .BADAR1,
+.BORDERALLDASHEDRED2, .BADAR2,
+.BORDERALLDASHEDRED3, .BADAR3,
+.BORDERALLDASHEDRED4, .BADAR4,
+.BORDERALLDASHEDRED5, .BADAR5,
+.BORDERALLDOUBLERED1, .BADOR1,
+.BORDERALLDOUBLERED2, .BADOR2,
+.BORDERALLDOUBLERED3, .BADOR3,
+.BORDERALLDOUBLERED4, .BADOR4,
+.BORDERALLDOUBLERED5, .BADOR5,
+.BORDERALLDOTTEDRED1, .BADTR1,
+.BORDERALLDOTTEDRED2, .BADTR2,
+.BORDERALLDOTTEDRED3, .BADTR3,
+.BORDERALLDOTTEDRED4, .BADTR4,
+.BORDERALLDOTTEDRED5, .BADTR5,
+.BORDERALLSOLIDRED1, .BASOR1,
+.BORDERALLSOLIDRED2, .BASOR2,
+.BORDERALLSOLIDRED3, .BASOR3,
+.BORDERALLSOLIDRED4, .BASOR4,
+.BORDERALLSOLIDRED5, .BASOR5,
 {
     border-top-color: #000000;
 }
-
-
+.BORDERTOPDASHEDRED1, .BTDAR1,
+.BORDERTOPDASHEDRED2, .BTDAR2,
+.BORDERTOPDASHEDRED3, .BTDAR3,
+.BORDERTOPDASHEDRED4, .BTDAR4,
+.BORDERTOPDASHEDRED5, .BTDAR5,
+.BORDERTOPDOUBLERED1, .BTDOR1,
+.BORDERTOPDOUBLERED2, .BTDOR2,
+.BORDERTOPDOUBLERED3, .BTDOR3,
+.BORDERTOPDOUBLERED4, .BTDOR4,
+.BORDERTOPDOUBLERED5, .BTDOR5,
+.BORDERTOPDOTTEDRED1, .BTDTR1,
+.BORDERTOPDOTTEDRED2, .BTDTR2,
+.BORDERTOPDOTTEDRED3, .BTDTR3,
+.BORDERTOPDOTTEDRED4, .BTDTR4,
+.BORDERTOPDOTTEDRED5, .BTDTR5,
+.BORDERTOPSOLIDRED1, .BTSOR1,
+.BORDERTOPSOLIDRED2, .BTSOR2,
+.BORDERTOPSOLIDRED3, .BTSOR3,
+.BORDERTOPSOLIDRED4, .BTSOR4,
+.BORDERTOPSOLIDRED5, .BTSOR5,
+.BORDERALLDASHEDRED1, .BADAR1,
+.BORDERALLDASHEDRED2, .BADAR2,
+.BORDERALLDASHEDRED3, .BADAR3,
+.BORDERALLDASHEDRED4, .BADAR4,
+.BORDERALLDASHEDRED5, .BADAR5,
+.BORDERALLDOUBLERED1, .BADOR1,
+.BORDERALLDOUBLERED2, .BADOR2,
+.BORDERALLDOUBLERED3, .BADOR3,
+.BORDERALLDOUBLERED4, .BADOR4,
+.BORDERALLDOUBLERED5, .BADOR5,
+.BORDERALLDOTTEDRED1, .BADTR1,
+.BORDERALLDOTTEDRED2, .BADTR2,
+.BORDERALLDOTTEDRED3, .BADTR3,
+.BORDERALLDOTTEDRED4, .BADTR4,
+.BORDERALLDOTTEDRED5, .BADTR5,
+.BORDERALLSOLIDRED1, .BASOR1,
+.BORDERALLSOLIDRED2, .BASOR2,
+.BORDERALLSOLIDRED3, .BASOR3,
+.BORDERALLSOLIDRED4, .BASOR4,
+.BORDERALLSOLIDRED5, .BASOR5,
 {
     border-top-color: #FFFFFF;
 }
-
-
+.BORDERTOPDASHEDRED1, .BTDAR1,
+.BORDERTOPDASHEDRED2, .BTDAR2,
+.BORDERTOPDASHEDRED3, .BTDAR3,
+.BORDERTOPDASHEDRED4, .BTDAR4,
+.BORDERTOPDASHEDRED5, .BTDAR5,
+.BORDERTOPDOUBLERED1, .BTDOR1,
+.BORDERTOPDOUBLERED2, .BTDOR2,
+.BORDERTOPDOUBLERED3, .BTDOR3,
+.BORDERTOPDOUBLERED4, .BTDOR4,
+.BORDERTOPDOUBLERED5, .BTDOR5,
+.BORDERTOPDOTTEDRED1, .BTDTR1,
+.BORDERTOPDOTTEDRED2, .BTDTR2,
+.BORDERTOPDOTTEDRED3, .BTDTR3,
+.BORDERTOPDOTTEDRED4, .BTDTR4,
+.BORDERTOPDOTTEDRED5, .BTDTR5,
+.BORDERTOPSOLIDRED1, .BTSOR1,
+.BORDERTOPSOLIDRED2, .BTSOR2,
+.BORDERTOPSOLIDRED3, .BTSOR3,
+.BORDERTOPSOLIDRED4, .BTSOR4,
+.BORDERTOPSOLIDRED5, .BTSOR5,
+.BORDERALLDASHEDRED1, .BADAR1,
+.BORDERALLDASHEDRED2, .BADAR2,
+.BORDERALLDASHEDRED3, .BADAR3,
+.BORDERALLDASHEDRED4, .BADAR4,
+.BORDERALLDASHEDRED5, .BADAR5,
+.BORDERALLDOUBLERED1, .BADOR1,
+.BORDERALLDOUBLERED2, .BADOR2,
+.BORDERALLDOUBLERED3, .BADOR3,
+.BORDERALLDOUBLERED4, .BADOR4,
+.BORDERALLDOUBLERED5, .BADOR5,
+.BORDERALLDOTTEDRED1, .BADTR1,
+.BORDERALLDOTTEDRED2, .BADTR2,
+.BORDERALLDOTTEDRED3, .BADTR3,
+.BORDERALLDOTTEDRED4, .BADTR4,
+.BORDERALLDOTTEDRED5, .BADTR5,
+.BORDERALLSOLIDRED1, .BASOR1,
+.BORDERALLSOLIDRED2, .BASOR2,
+.BORDERALLSOLIDRED3, .BASOR3,
+.BORDERALLSOLIDRED4, .BASOR4,
+.BORDERALLSOLIDRED5, .BASOR5,
 {
     border-top-color: #3F3F3F;
 }
-
-
+.BORDERTOPDASHEDRED1, .BTDAR1,
+.BORDERTOPDASHEDRED2, .BTDAR2,
+.BORDERTOPDASHEDRED3, .BTDAR3,
+.BORDERTOPDASHEDRED4, .BTDAR4,
+.BORDERTOPDASHEDRED5, .BTDAR5,
+.BORDERTOPDOUBLERED1, .BTDOR1,
+.BORDERTOPDOUBLERED2, .BTDOR2,
+.BORDERTOPDOUBLERED3, .BTDOR3,
+.BORDERTOPDOUBLERED4, .BTDOR4,
+.BORDERTOPDOUBLERED5, .BTDOR5,
+.BORDERTOPDOTTEDRED1, .BTDTR1,
+.BORDERTOPDOTTEDRED2, .BTDTR2,
+.BORDERTOPDOTTEDRED3, .BTDTR3,
+.BORDERTOPDOTTEDRED4, .BTDTR4,
+.BORDERTOPDOTTEDRED5, .BTDTR5,
+.BORDERTOPSOLIDRED1, .BTSOR1,
+.BORDERTOPSOLIDRED2, .BTSOR2,
+.BORDERTOPSOLIDRED3, .BTSOR3,
+.BORDERTOPSOLIDRED4, .BTSOR4,
+.BORDERTOPSOLIDRED5, .BTSOR5,
+.BORDERALLDASHEDRED1, .BADAR1,
+.BORDERALLDASHEDRED2, .BADAR2,
+.BORDERALLDASHEDRED3, .BADAR3,
+.BORDERALLDASHEDRED4, .BADAR4,
+.BORDERALLDASHEDRED5, .BADAR5,
+.BORDERALLDOUBLERED1, .BADOR1,
+.BORDERALLDOUBLERED2, .BADOR2,
+.BORDERALLDOUBLERED3, .BADOR3,
+.BORDERALLDOUBLERED4, .BADOR4,
+.BORDERALLDOUBLERED5, .BADOR5,
+.BORDERALLDOTTEDRED1, .BADTR1,
+.BORDERALLDOTTEDRED2, .BADTR2,
+.BORDERALLDOTTEDRED3, .BADTR3,
+.BORDERALLDOTTEDRED4, .BADTR4,
+.BORDERALLDOTTEDRED5, .BADTR5,
+.BORDERALLSOLIDRED1, .BASOR1,
+.BORDERALLSOLIDRED2, .BASOR2,
+.BORDERALLSOLIDRED3, .BASOR3,
+.BORDERALLSOLIDRED4, .BASOR4,
+.BORDERALLSOLIDRED5, .BASOR5,
 {
     border-top-color: #7F7F7F;
 }
-
-
+.BORDERTOPDASHEDRED1, .BTDAR1,
+.BORDERTOPDASHEDRED2, .BTDAR2,
+.BORDERTOPDASHEDRED3, .BTDAR3,
+.BORDERTOPDASHEDRED4, .BTDAR4,
+.BORDERTOPDASHEDRED5, .BTDAR5,
+.BORDERTOPDOUBLERED1, .BTDOR1,
+.BORDERTOPDOUBLERED2, .BTDOR2,
+.BORDERTOPDOUBLERED3, .BTDOR3,
+.BORDERTOPDOUBLERED4, .BTDOR4,
+.BORDERTOPDOUBLERED5, .BTDOR5,
+.BORDERTOPDOTTEDRED1, .BTDTR1,
+.BORDERTOPDOTTEDRED2, .BTDTR2,
+.BORDERTOPDOTTEDRED3, .BTDTR3,
+.BORDERTOPDOTTEDRED4, .BTDTR4,
+.BORDERTOPDOTTEDRED5, .BTDTR5,
+.BORDERTOPSOLIDRED1, .BTSOR1,
+.BORDERTOPSOLIDRED2, .BTSOR2,
+.BORDERTOPSOLIDRED3, .BTSOR3,
+.BORDERTOPSOLIDRED4, .BTSOR4,
+.BORDERTOPSOLIDRED5, .BTSOR5,
+.BORDERALLDASHEDRED1, .BADAR1,
+.BORDERALLDASHEDRED2, .BADAR2,
+.BORDERALLDASHEDRED3, .BADAR3,
+.BORDERALLDASHEDRED4, .BADAR4,
+.BORDERALLDASHEDRED5, .BADAR5,
+.BORDERALLDOUBLERED1, .BADOR1,
+.BORDERALLDOUBLERED2, .BADOR2,
+.BORDERALLDOUBLERED3, .BADOR3,
+.BORDERALLDOUBLERED4, .BADOR4,
+.BORDERALLDOUBLERED5, .BADOR5,
+.BORDERALLDOTTEDRED1, .BADTR1,
+.BORDERALLDOTTEDRED2, .BADTR2,
+.BORDERALLDOTTEDRED3, .BADTR3,
+.BORDERALLDOTTEDRED4, .BADTR4,
+.BORDERALLDOTTEDRED5, .BADTR5,
+.BORDERALLSOLIDRED1, .BASOR1,
+.BORDERALLSOLIDRED2, .BASOR2,
+.BORDERALLSOLIDRED3, .BASOR3,
+.BORDERALLSOLIDRED4, .BASOR4,
+.BORDERALLSOLIDRED5, .BASOR5,
 {
     border-top-color: #BFBFBF;
 }
