added classes that match border-top-color: yellow

--- a/AcSS/utils.css
+++ b/AcSS/utils.css
@@ -1250,46 +1250,46 @@
 {
     border-top-color: #0000FF;
 }
-.BORDERTOPDASHEDRED1, .BTDAR1,
-.BORDERTOPDASHEDRED2, .BTDAR2,
-.BORDERTOPDASHEDRED3, .BTDAR3,
-.BORDERTOPDASHEDRED4, .BTDAR4,
-.BORDERTOPDASHEDRED5, .BTDAR5,
-.BORDERTOPDOUBLERED1, .BTDOR1,
-.BORDERTOPDOUBLERED2, .BTDOR2,
-.BORDERTOPDOUBLERED3, .BTDOR3,
-.BORDERTOPDOUBLERED4, .BTDOR4,
-.BORDERTOPDOUBLERED5, .BTDOR5,
-.BORDERTOPDOTTEDRED1, .BTDTR1,
-.BORDERTOPDOTTEDRED2, .BTDTR2,
-.BORDERTOPDOTTEDRED3, .BTDTR3,
-.BORDERTOPDOTTEDRED4, .BTDTR4,
-.BORDERTOPDOTTEDRED5, .BTDTR5,
-.BORDERTOPSOLIDRED1, .BTSOR1,
-.BORDERTOPSOLIDRED2, .BTSOR2,
-.BORDERTOPSOLIDRED3, .BTSOR3,
-.BORDERTOPSOLIDRED4, .BTSOR4,
-.BORDERTOPSOLIDRED5, .BTSOR5,
-.BORDERALLDASHEDRED1, .BADAR1,
-.BORDERALLDASHEDRED2, .BADAR2,
-.BORDERALLDASHEDRED3, .BADAR3,
-.BORDERALLDASHEDRED4, .BADAR4,
-.BORDERALLDASHEDRED5, .BADAR5,
-.BORDERALLDOUBLERED1, .BADOR1,
-.BORDERALLDOUBLERED2, .BADOR2,
-.BORDERALLDOUBLERED3, .BADOR3,
-.BORDERALLDOUBLERED4, .BADOR4,
-.BORDERALLDOUBLERED5, .BADOR5,
-.BORDERALLDOTTEDRED1, .BADTR1,
-.BORDERALLDOTTEDRED2, .BADTR2,
-.BORDERALLDOTTEDRED3, .BADTR3,
-.BORDERALLDOTTEDRED4, .BADTR4,
-.BORDERALLDOTTEDRED5, .BADTR5,
-.BORDERALLSOLIDRED1, .BASOR1,
-.BORDERALLSOLIDRED2, .BASOR2,
-.BORDERALLSOLIDRED3, .BASOR3,
-.BORDERALLSOLIDRED4, .BASOR4,
-.BORDERALLSOLIDRED5, .BASOR5,
+.BORDERTOPDASHEDYELLOW1, .BTDAY1,
+.BORDERTOPDASHEDYELLOW2, .BTDAY2,
+.BORDERTOPDASHEDYELLOW3, .BTDAY3,
+.BORDERTOPDASHEDYELLOW4, .BTDAY4,
+.BORDERTOPDASHEDYELLOW5, .BTDAY5,
+.BORDERTOPDOUBLEYELLOW1, .BTDOY1,
+.BORDERTOPDOUBLEYELLOW2, .BTDOY2,
+.BORDERTOPDOUBLEYELLOW3, .BTDOY3,
+.BORDERTOPDOUBLEYELLOW4, .BTDOY4,
+.BORDERTOPDOUBLEYELLOW5, .BTDOY5,
+.BORDERTOPDOTTEDYELLOW1, .BTDTY1,
+.BORDERTOPDOTTEDYELLOW2, .BTDTY2,
+.BORDERTOPDOTTEDYELLOW3, .BTDTY3,
+.BORDERTOPDOTTEDYELLOW4, .BTDTY4,
+.BORDERTOPDOTTEDYELLOW5, .BTDTY5,
+.BORDERTOPSOLIDYELLOW1, .BTSOY1,
+.BORDERTOPSOLIDYELLOW2, .BTSOY2,
+.BORDERTOPSOLIDYELLOW3, .BTSOY3,
+.BORDERTOPSOLIDYELLOW4, .BTSOY4,
+.BORDERTOPSOLIDYELLOW5, .BTSOY5,
+.BORDERALLDASHEDYELLOW1, .BADAY1,
+.BORDERALLDASHEDYELLOW2, .BADAY2,
+.BORDERALLDASHEDYELLOW3, .BADAY3,
+.BORDERALLDASHEDYELLOW4, .BADAY4,
+.BORDERALLDASHEDYELLOW5, .BADAY5,
+.BORDERALLDOUBLEYELLOW1, .BADOY1,
+.BORDERALLDOUBLEYELLOW2, .BADOY2,
+.BORDERALLDOUBLEYELLOW3, .BADOY3,
+.BORDERALLDOUBLEYELLOW4, .BADOY4,
+.BORDERALLDOUBLEYELLOW5, .BADOY5,
+.BORDERALLDOTTEDYELLOW1, .BADTY1,
+.BORDERALLDOTTEDYELLOW2, .BADTY2,
+.BORDERALLDOTTEDYELLOW3, .BADTY3,
+.BORDERALLDOTTEDYELLOW4, .BADTY4,
+.BORDERALLDOTTEDYELLOW5, .BADTY5,
+.BORDERALLSOLIDYELLOW1, .BASOY1,
+.BORDERALLSOLIDYELLOW2, .BASOY2,
+.BORDERALLSOLIDYELLOW3, .BASOY3,
+.BORDERALLSOLIDYELLOW4, .BASOY4,
+.BORDERALLSOLIDYELLOW5, .BASOY5,
 {
     border-top-color: #FFFF00;
 }
