added classes that match border-top-color: black

--- a/AcSS/utils.css
+++ b/AcSS/utils.css
@@ -1293,46 +1293,46 @@
 {
     border-top-color: #FFFF00;
 }
-.BORDERTOPDASHEDRED1, .BTDAR1,
-.BORDERTOPDASHEDRED2, .BTDAR2,
-.BORDERTOPDASHEDRED3, .BTDAR3,
-.BORDERTOPDASHEDRED4, .BTDAR4,
-.BORDERTOPDASHEDRED5, .BTDAR5,
-.BORDERTOPDOUBLERED1, .BTDOR1,
-.BORDERTOPDOUBLERED2, .BTDOR2,
-.BORDERTOPDOUBLERED3, .BTDOR3,
-.BORDERTOPDOUBLERED4, .BTDOR4,
-.BORDERTOPDOUBLERED5, .BTDOR5,
-.BORDERTOPDOTTEDRED1, .BTDTR1,
-.BORDERTOPDOTTEDRED2, .BTDTR2,
-.BORDERTOPDOTTEDRED3, .BTDTR3,
-.BORDERTOPDOTTEDRED4, .BTDTR4,
-.BORDERTOPDOTTEDRED5, .BTDTR5,
-.BORDERTOPSOLIDRED1, .BTSOR1,
-.BORDERTOPSOLIDRED2, .BTSOR2,
-.BORDERTOPSOLIDRED3, .BTSOR3,
-.BORDERTOPSOLIDRED4, .BTSOR4,
-.BORDERTOPSOLIDRED5, .BTSOR5,
-.BORDERALLDASHEDRED1, .BADAR1,
-.BORDERALLDASHEDRED2, .BADAR2,
-.BORDERALLDASHEDRED3, .BADAR3,
-.BORDERALLDASHEDRED4, .BADAR4,
-.BORDERALLDASHEDRED5, .BADAR5,
-.BORDERALLDOUBLERED1, .BADOR1,
-.BORDERALLDOUBLERED2, .BADOR2,
-.BORDERALLDOUBLERED3, .BADOR3,
-.BORDERALLDOUBLERED4, .BADOR4,
-.BORDERALLDOUBLERED5, .BADOR5,
-.BORDERALLDOTTEDRED1, .BADTR1,
-.BORDERALLDOTTEDRED2, .BADTR2,
-.BORDERALLDOTTEDRED3, .BADTR3,
-.BORDERALLDOTTEDRED4, .BADTR4,
-.BORDERALLDOTTEDRED5, .BADTR5,
-.BORDERALLSOLIDRED1, .BASOR1,
-.BORDERALLSOLIDRED2, .BASOR2,
-.BORDERALLSOLIDRED3, .BASOR3,
-.BORDERALLSOLIDRED4, .BASOR4,
-.BORDERALLSOLIDRED5, .BASOR5,
+.BORDERTOPDASHEDBLACK1, .BTDA01,
+.BORDERTOPDASHEDBLACK2, .BTDA02,
+.BORDERTOPDASHEDBLACK3, .BTDA03,
+.BORDERTOPDASHEDBLACK4, .BTDA04,
+.BORDERTOPDASHEDBLACK5, .BTDA05,
+.BORDERTOPDOUBLEBLACK1, .BTDO01,
+.BORDERTOPDOUBLEBLACK2, .BTDO02,
+.BORDERTOPDOUBLEBLACK3, .BTDO03,
+.BORDERTOPDOUBLEBLACK4, .BTDO04,
+.BORDERTOPDOUBLEBLACK5, .BTDO05,
+.BORDERTOPDOTTEDBLACK1, .BTDT01,
+.BORDERTOPDOTTEDBLACK2, .BTDT02,
+.BORDERTOPDOTTEDBLACK3, .BTDT03,
+.BORDERTOPDOTTEDBLACK4, .BTDT04,
+.BORDERTOPDOTTEDBLACK5, .BTDT05,
+.BORDERTOPSOLIDBLACK1, .BTSO01,
+.BORDERTOPSOLIDBLACK2, .BTSO02,
+.BORDERTOPSOLIDBLACK3, .BTSO03,
+.BORDERTOPSOLIDBLACK4, .BTSO04,
+.BORDERTOPSOLIDBLACK5, .BTSO05,
+.BORDERALLDASHEDBLACK1, .BADA01,
+.BORDERALLDASHEDBLACK2, .BADA02,
+.BORDERALLDASHEDBLACK3, .BADA03,
+.BORDERALLDASHEDBLACK4, .BADA04,
+.BORDERALLDASHEDBLACK5, .BADA05,
+.BORDERALLDOUBLEBLACK1, .BADO01,
+.BORDERALLDOUBLEBLACK2, .BADO02,
+.BORDERALLDOUBLEBLACK3, .BADO03,
+.BORDERALLDOUBLEBLACK4, .BADO04,
+.BORDERALLDOUBLEBLACK5, .BADO05,
+.BORDERALLDOTTEDBLACK1, .BADT01,
+.BORDERALLDOTTEDBLACK2, .BADT02,
+.BORDERALLDOTTEDBLACK3, .BADT03,
+.BORDERALLDOTTEDBLACK4, .BADT04,
+.BORDERALLDOTTEDBLACK5, .BADT05,
+.BORDERALLSOLIDBLACK1, .BASO01,
+.BORDERALLSOLIDBLACK2, .BASO02,
+.BORDERALLSOLIDBLACK3, .BASO03,
+.BORDERALLSOLIDBLACK4, .BASO04,
+.BORDERALLSOLIDBLACK5, .BASO05,
 {
     border-top-color: #000000;
 }
