added classes that match border-top-color: white

--- a/AcSS/utils.css
+++ b/AcSS/utils.css
@@ -1336,46 +1336,46 @@
 {
     border-top-color: #000000;
 }
-.BORDERTOPDASHEDRED1, .BTDAR1,
-.BORDERTOPDASHEDRED2, .BTDAR2,
-.BORDERTOPDASHEDRED3, .BTDAR3,
-.BORDERTOPDASHEDRED4, .BTDAR4,
-.BORDERTOPDASHEDRED5, .BTDAR5,
-.BORDERTOPDOUBLERED1, .BTDOR1,
-.BORDERTOPDOUBLERED2, .BTDOR2,
-.BORDERTOPDOUBLERED3, .BTDOR3,
-.BORDERTOPDOUBLERED4, .BTDOR4,
-.BORDERTOPDOUBLERED5, .BTDOR5,
-.BORDERTOPDOTTEDRED1, .BTDTR1,
-.BORDERTOPDOTTEDRED2, .BTDTR2,
-.BORDERTOPDOTTEDRED3, .BTDTR3,
-.BORDERTOPDOTTEDRED4, .BTDTR4,
-.BORDERTOPDOTTEDRED5, .BTDTR5,
-.BORDERTOPSOLIDRED1, .BTSOR1,
-.BORDERTOPSOLIDRED2, .BTSOR2,
-.BORDERTOPSOLIDRED3, .BTSOR3,
-.BORDERTOPSOLIDRED4, .BTSOR4,
-.BORDERTOPSOLIDRED5, .BTSOR5,
-.BORDERALLDASHEDRED1, .BADAR1,
-.BORDERALLDASHEDRED2, .BADAR2,
-.BORDERALLDASHEDRED3, .BADAR3,
-.BORDERALLDASHEDRED4, .BADAR4,
-.BORDERALLDASHEDRED5, .BADAR5,
-.BORDERALLDOUBLERED1, .BADOR1,
-.BORDERALLDOUBLERED2, .BADOR2,
-.BORDERALLDOUBLERED3, .BADOR3,
-.BORDERALLDOUBLERED4, .BADOR4,
-.BORDERALLDOUBLERED5, .BADOR5,
-.BORDERALLDOTTEDRED1, .BADTR1,
-.BORDERALLDOTTEDRED2, .BADTR2,
-.BORDERALLDOTTEDRED3, .BADTR3,
-.BORDERALLDOTTEDRED4, .BADTR4,
-.BORDERALLDOTTEDRED5, .BADTR5,
-.BORDERALLSOLIDRED1, .BASOR1,
-.BORDERALLSOLIDRED2, .BASOR2,
-.BORDERALLSOLIDRED3, .BASOR3,
-.BORDERALLSOLIDRED4, .BASOR4,
-.BORDERALLSOLIDRED5, .BASOR5,
+.BORDERTOPDASHEDWHITE1, .BTDAW1,
+.BORDERTOPDASHEDWHITE2, .BTDAW2,
+.BORDERTOPDASHEDWHITE3, .BTDAW3,
+.BORDERTOPDASHEDWHITE4, .BTDAW4,
+.BORDERTOPDASHEDWHITE5, .BTDAW5,
+.BORDERTOPDOUBLEWHITE1, .BTDOW1,
+.BORDERTOPDOUBLEWHITE2, .BTDOW2,
+.BORDERTOPDOUBLEWHITE3, .BTDOW3,
+.BORDERTOPDOUBLEWHITE4, .BTDOW4,
+.BORDERTOPDOUBLEWHITE5, .BTDOW5,
+.BORDERTOPDOTTEDWHITE1, .BTDTW1,
+.BORDERTOPDOTTEDWHITE2, .BTDTW2,
+.BORDERTOPDOTTEDWHITE3, .BTDTW3,
+.BORDERTOPDOTTEDWHITE4, .BTDTW4,
+.BORDERTOPDOTTEDWHITE5, .BTDTW5,
+.BORDERTOPSOLIDWHITE1, .BTSOW1,
+.BORDERTOPSOLIDWHITE2, .BTSOW2,
+.BORDERTOPSOLIDWHITE3, .BTSOW3,
+.BORDERTOPSOLIDWHITE4, .BTSOW4,
+.BORDERTOPSOLIDWHITE5, .BTSOW5,
+.BORDERALLDASHEDWHITE1, .BADAW1,
+.BORDERALLDASHEDWHITE2, .BADAW2,
+.BORDERALLDASHEDWHITE3, .BADAW3,
+.BORDERALLDASHEDWHITE4, .BADAW4,
+.BORDERALLDASHEDWHITE5, .BADAW5,
+.BORDERALLDOUBLEWHITE1, .BADOW1,
+.BORDERALLDOUBLEWHITE2, .BADOW2,
+.BORDERALLDOUBLEWHITE3, .BADOW3,
+.BORDERALLDOUBLEWHITE4, .BADOW4,
+.BORDERALLDOUBLEWHITE5, .BADOW5,
+.BORDERALLDOTTEDWHITE1, .BADTW1,
+.BORDERALLDOTTEDWHITE2, .BADTW2,
+.BORDERALLDOTTEDWHITE3, .BADTW3,
+.BORDERALLDOTTEDWHITE4, .BADTW4,
+.BORDERALLDOTTEDWHITE5, .BADTW5,
+.BORDERALLSOLIDWHITE1, .BASOW1,
+.BORDERALLSOLIDWHITE2, .BASOW2,
+.BORDERALLSOLIDWHITE3, .BASOW3,
+.BORDERALLSOLIDWHITE4, .BASOW4,
+.BORDERALLSOLIDWHITE5, .BASOW5,
 {
     border-top-color: #FFFFFF;
 }
