added classes that match border-top-color: grey1

--- a/AcSS/utils.css
+++ b/AcSS/utils.css
@@ -1379,132 +1379,54 @@
 {
     border-top-color: #FFFFFF;
 }
-.BORDERTOPDASHEDRED1, .BTDAR1,
-.BORDERTOPDASHEDRED2, .BTDAR2,
-.BORDERTOPDASHEDRED3, .BTDAR3,
-.BORDERTOPDASHEDRED4, .BTDAR4,
-.BORDERTOPDASHEDRED5, .BTDAR5,
-.BORDERTOPDOUBLERED1, .BTDOR1,
-.BORDERTOPDOUBLERED2, .BTDOR2,
-.BORDERTOPDOUBLERED3, .BTDOR3,
-.BORDERTOPDOUBLERED4, .BTDOR4,
-.BORDERTOPDOUBLERED5, .BTDOR5,
-.BORDERTOPDOTTEDRED1, .BTDTR1,
-.BORDERTOPDOTTEDRED2, .BTDTR2,
-.BORDERTOPDOTTEDRED3, .BTDTR3,
-.BORDERTOPDOTTEDRED4, .BTDTR4,
-.BORDERTOPDOTTEDRED5, .BTDTR5,
-.BORDERTOPSOLIDRED1, .BTSOR1,
-.BORDERTOPSOLIDRED2, .BTSOR2,
-.BORDERTOPSOLIDRED3, .BTSOR3,
-.BORDERTOPSOLIDRED4, .BTSOR4,
-.BORDERTOPSOLIDRED5, .BTSOR5,
-.BORDERALLDASHEDRED1, .BADAR1,
-.BORDERALLDASHEDRED2, .BADAR2,
-.BORDERALLDASHEDRED3, .BADAR3,
-.BORDERALLDASHEDRED4, .BADAR4,
-.BORDERALLDASHEDRED5, .BADAR5,
-.BORDERALLDOUBLERED1, .BADOR1,
-.BORDERALLDOUBLERED2, .BADOR2,
-.BORDERALLDOUBLERED3, .BADOR3,
-.BORDERALLDOUBLERED4, .BADOR4,
-.BORDERALLDOUBLERED5, .BADOR5,
-.BORDERALLDOTTEDRED1, .BADTR1,
-.BORDERALLDOTTEDRED2, .BADTR2,
-.BORDERALLDOTTEDRED3, .BADTR3,
-.BORDERALLDOTTEDRED4, .BADTR4,
-.BORDERALLDOTTEDRED5, .BADTR5,
-.BORDERALLSOLIDRED1, .BASOR1,
-.BORDERALLSOLIDRED2, .BASOR2,
-.BORDERALLSOLIDRED3, .BASOR3,
-.BORDERALLSOLIDRED4, .BASOR4,
-.BORDERALLSOLIDRED5, .BASOR5,
+.BORDERTOPDASHEDGREY11, .BTDAG11,
+.BORDERTOPDASHEDGREY12, .BTDAG12,
+.BORDERTOPDASHEDGREY13, .BTDAG13,
+.BORDERTOPDASHEDGREY14, .BTDAG14,
+.BORDERTOPDASHEDGREY15, .BTDAG15,
+.BORDERTOPDOUBLEGREY11, .BTDOG11,
+.BORDERTOPDOUBLEGREY12, .BTDOG12,
+.BORDERTOPDOUBLEGREY13, .BTDOG13,
+.BORDERTOPDOUBLEGREY14, .BTDOG14,
+.BORDERTOPDOUBLEGREY15, .BTDOG15,
+.BORDERTOPDOTTEDGREY11, .BTDTG11,
+.BORDERTOPDOTTEDGREY12, .BTDTG12,
+.BORDERTOPDOTTEDGREY13, .BTDTG13,
+.BORDERTOPDOTTEDGREY14, .BTDTG14,
+.BORDERTOPDOTTEDGREY15, .BTDTG15,
+.BORDERTOPSOLIDGREY11, .BTSOG11,
+.BORDERTOPSOLIDGREY12, .BTSOG12,
+.BORDERTOPSOLIDGREY13, .BTSOG13,
+.BORDERTOPSOLIDGREY14, .BTSOG14,
+.BORDERTOPSOLIDGREY15, .BTSOG15,
+.BORDERALLDASHEDGREY11, .BADAG11,
+.BORDERALLDASHEDGREY12, .BADAG12,
+.BORDERALLDASHEDGREY13, .BADAG13,
+.BORDERALLDASHEDGREY14, .BADAG14,
+.BORDERALLDASHEDGREY15, .BADAG15,
+.BORDERALLDOUBLEGREY11, .BADOG11,
+.BORDERALLDOUBLEGREY12, .BADOG12,
+.BORDERALLDOUBLEGREY13, .BADOG13,
+.BORDERALLDOUBLEGREY14, .BADOG14,
+.BORDERALLDOUBLEGREY15, .BADOG15,
+.BORDERALLDOTTEDGREY11, .BADTG11,
+.BORDERALLDOTTEDGREY12, .BADTG12,
+.BORDERALLDOTTEDGREY13, .BADTG13,
+.BORDERALLDOTTEDGREY14, .BADTG14,
+.BORDERALLDOTTEDGREY15, .BADTG15,
+.BORDERALLSOLIDGREY11, .BASOG11,
+.BORDERALLSOLIDGREY12, .BASOG12,
+.BORDERALLSOLIDGREY13, .BASOG13,
+.BORDERALLSOLIDGREY14, .BASOG14,
+.BORDERALLSOLIDGREY15, .BASOG15,
 {
     border-top-color: #3F3F3F;
 }
-.BORDERTOPDASHEDRED1, .BTDAR1,
-.BORDERTOPDASHEDRED2, .BTDAR2,
-.BORDERTOPDASHEDRED3, .BTDAR3,
-.BORDERTOPDASHEDRED4, .BTDAR4,
-.BORDERTOPDASHEDRED5, .BTDAR5,
-.BORDERTOPDOUBLERED1, .BTDOR1,
-.BORDERTOPDOUBLERED2, .BTDOR2,
-.BORDERTOPDOUBLERED3, .BTDOR3,
-.BORDERTOPDOUBLERED4, .BTDOR4,
-.BORDERTOPDOUBLERED5, .BTDOR5,
-.BORDERTOPDOTTEDRED1, .BTDTR1,
-.BORDERTOPDOTTEDRED2, .BTDTR2,
-.BORDERTOPDOTTEDRED3, .BTDTR3,
-.BORDERTOPDOTTEDRED4, .BTDTR4,
-.BORDERTOPDOTTEDRED5, .BTDTR5,
-.BORDERTOPSOLIDRED1, .BTSOR1,
-.BORDERTOPSOLIDRED2, .BTSOR2,
-.BORDERTOPSOLIDRED3, .BTSOR3,
-.BORDERTOPSOLIDRED4, .BTSOR4,
-.BORDERTOPSOLIDRED5, .BTSOR5,
-.BORDERALLDASHEDRED1, .BADAR1,
-.BORDERALLDASHEDRED2, .BADAR2,
-.BORDERALLDASHEDRED3, .BADAR3,
-.BORDERALLDASHEDRED4, .BADAR4,
-.BORDERALLDASHEDRED5, .BADAR5,
-.BORDERALLDOUBLERED1, .BADOR1,
-.BORDERALLDOUBLERED2, .BADOR2,
-.BORDERALLDOUBLERED3, .BADOR3,
-.BORDERALLDOUBLERED4, .BADOR4,
-.BORDERALLDOUBLERED5, .BADOR5,
-.BORDERALLDOTTEDRED1, .BADTR1,
-.BORDERALLDOTTEDRED2, .BADTR2,
-.BORDERALLDOTTEDRED3, .BADTR3,
-.BORDERALLDOTTEDRED4, .BADTR4,
-.BORDERALLDOTTEDRED5, .BADTR5,
-.BORDERALLSOLIDRED1, .BASOR1,
-.BORDERALLSOLIDRED2, .BASOR2,
-.BORDERALLSOLIDRED3, .BASOR3,
-.BORDERALLSOLIDRED4, .BASOR4,
-.BORDERALLSOLIDRED5, .BASOR5,
+
 {
     border-top-color: #7F7F7F;
 }
-.BORDERTOPDASHEDRED1, .BTDAR1,
-.BORDERTOPDASHEDRED2, .BTDAR2,
-.BORDERTOPDASHEDRED3, .BTDAR3,
-.BORDERTOPDASHEDRED4, .BTDAR4,
-.BORDERTOPDASHEDRED5, .BTDAR5,
-.BORDERTOPDOUBLERED1, .BTDOR1,
-.BORDERTOPDOUBLERED2, .BTDOR2,
-.BORDERTOPDOUBLERED3, .BTDOR3,
-.BORDERTOPDOUBLERED4, .BTDOR4,
-.BORDERTOPDOUBLERED5, .BTDOR5,
-.BORDERTOPDOTTEDRED1, .BTDTR1,
-.BORDERTOPDOTTEDRED2, .BTDTR2,
-.BORDERTOPDOTTEDRED3, .BTDTR3,
-.BORDERTOPDOTTEDRED4, .BTDTR4,
-.BORDERTOPDOTTEDRED5, .BTDTR5,
-.BORDERTOPSOLIDRED1, .BTSOR1,
-.BORDERTOPSOLIDRED2, .BTSOR2,
-.BORDERTOPSOLIDRED3, .BTSOR3,
-.BORDERTOPSOLIDRED4, .BTSOR4,
-.BORDERTOPSOLIDRED5, .BTSOR5,
-.BORDERALLDASHEDRED1, .BADAR1,
-.BORDERALLDASHEDRED2, .BADAR2,
-.BORDERALLDASHEDRED3, .BADAR3,
-.BORDERALLDASHEDRED4, .BADAR4,
-.BORDERALLDASHEDRED5, .BADAR5,
-.BORDERALLDOUBLERED1, .BADOR1,
-.BORDERALLDOUBLERED2, .BADOR2,
-.BORDERALLDOUBLERED3, .BADOR3,
-.BORDERALLDOUBLERED4, .BADOR4,
-.BORDERALLDOUBLERED5, .BADOR5,
-.BORDERALLDOTTEDRED1, .BADTR1,
-.BORDERALLDOTTEDRED2, .BADTR2,
-.BORDERALLDOTTEDRED3, .BADTR3,
-.BORDERALLDOTTEDRED4, .BADTR4,
-.BORDERALLDOTTEDRED5, .BADTR5,
-.BORDERALLSOLIDRED1, .BASOR1,
-.BORDERALLSOLIDRED2, .BASOR2,
-.BORDERALLSOLIDRED3, .BASOR3,
-.BORDERALLSOLIDRED4, .BASOR4,
-.BORDERALLSOLIDRED5, .BASOR5,
+
 {
     border-top-color: #BFBFBF;
 }
