added classes that match border-top-color: grey2 and grey3

--- a/AcSS/utils.css
+++ b/AcSS/utils.css
@@ -1422,11 +1422,89 @@
 {
     border-top-color: #3F3F3F;
 }
-
+.BORDERTOPDASHEDGREY21, .BTDAG21,
+.BORDERTOPDASHEDGREY22, .BTDAG22,
+.BORDERTOPDASHEDGREY23, .BTDAG23,
+.BORDERTOPDASHEDGREY24, .BTDAG24,
+.BORDERTOPDASHEDGREY25, .BTDAG25,
+.BORDERTOPDOUBLEGREY21, .BTDOG21,
+.BORDERTOPDOUBLEGREY22, .BTDOG22,
+.BORDERTOPDOUBLEGREY23, .BTDOG23,
+.BORDERTOPDOUBLEGREY24, .BTDOG24,
+.BORDERTOPDOUBLEGREY25, .BTDOG25,
+.BORDERTOPDOTTEDGREY21, .BTDTG21,
+.BORDERTOPDOTTEDGREY22, .BTDTG22,
+.BORDERTOPDOTTEDGREY23, .BTDTG23,
+.BORDERTOPDOTTEDGREY24, .BTDTG24,
+.BORDERTOPDOTTEDGREY25, .BTDTG25,
+.BORDERTOPSOLIDGREY21, .BTSOG21,
+.BORDERTOPSOLIDGREY22, .BTSOG22,
+.BORDERTOPSOLIDGREY23, .BTSOG23,
+.BORDERTOPSOLIDGREY24, .BTSOG24,
+.BORDERTOPSOLIDGREY25, .BTSOG25,
+.BORDERALLDASHEDGREY21, .BADAG21,
+.BORDERALLDASHEDGREY22, .BADAG22,
+.BORDERALLDASHEDGREY23, .BADAG23,
+.BORDERALLDASHEDGREY24, .BADAG24,
+.BORDERALLDASHEDGREY25, .BADAG25,
+.BORDERALLDOUBLEGREY21, .BADOG21,
+.BORDERALLDOUBLEGREY22, .BADOG22,
+.BORDERALLDOUBLEGREY23, .BADOG23,
+.BORDERALLDOUBLEGREY24, .BADOG24,
+.BORDERALLDOUBLEGREY25, .BADOG25,
+.BORDERALLDOTTEDGREY21, .BADTG21,
+.BORDERALLDOTTEDGREY22, .BADTG22,
+.BORDERALLDOTTEDGREY23, .BADTG23,
+.BORDERALLDOTTEDGREY24, .BADTG24,
+.BORDERALLDOTTEDGREY25, .BADTG25,
+.BORDERALLSOLIDGREY21, .BASOG21,
+.BORDERALLSOLIDGREY22, .BASOG22,
+.BORDERALLSOLIDGREY23, .BASOG23,
+.BORDERALLSOLIDGREY24, .BASOG24,
+.BORDERALLSOLIDGREY25, .BASOG25,
 {
     border-top-color: #7F7F7F;
 }
-
+.BORDERTOPDASHEDGREY31, .BTDAG31,
+.BORDERTOPDASHEDGREY32, .BTDAG32,
+.BORDERTOPDASHEDGREY33, .BTDAG33,
+.BORDERTOPDASHEDGREY34, .BTDAG34,
+.BORDERTOPDASHEDGREY35, .BTDAG35,
+.BORDERTOPDOUBLEGREY31, .BTDOG31,
+.BORDERTOPDOUBLEGREY32, .BTDOG32,
+.BORDERTOPDOUBLEGREY33, .BTDOG33,
+.BORDERTOPDOUBLEGREY34, .BTDOG34,
+.BORDERTOPDOUBLEGREY35, .BTDOG35,
+.BORDERTOPDOTTEDGREY31, .BTDTG31,
+.BORDERTOPDOTTEDGREY32, .BTDTG32,
+.BORDERTOPDOTTEDGREY33, .BTDTG33,
+.BORDERTOPDOTTEDGREY34, .BTDTG34,
+.BORDERTOPDOTTEDGREY35, .BTDTG35,
+.BORDERTOPSOLIDGREY31, .BTSOG31,
+.BORDERTOPSOLIDGREY32, .BTSOG32,
+.BORDERTOPSOLIDGREY33, .BTSOG33,
+.BORDERTOPSOLIDGREY34, .BTSOG34,
+.BORDERTOPSOLIDGREY35, .BTSOG35,
+.BORDERALLDASHEDGREY31, .BADAG31,
+.BORDERALLDASHEDGREY32, .BADAG32,
+.BORDERALLDASHEDGREY33, .BADAG33,
+.BORDERALLDASHEDGREY34, .BADAG34,
+.BORDERALLDASHEDGREY35, .BADAG35,
+.BORDERALLDOUBLEGREY31, .BADOG31,
+.BORDERALLDOUBLEGREY32, .BADOG32,
+.BORDERALLDOUBLEGREY33, .BADOG33,
+.BORDERALLDOUBLEGREY34, .BADOG34,
+.BORDERALLDOUBLEGREY35, .BADOG35,
+.BORDERALLDOTTEDGREY31, .BADTG31,
+.BORDERALLDOTTEDGREY32, .BADTG32,
+.BORDERALLDOTTEDGREY33, .BADTG33,
+.BORDERALLDOTTEDGREY34, .BADTG34,
+.BORDERALLDOTTEDGREY35, .BADTG35,
+.BORDERALLSOLIDGREY31, .BASOG31,
+.BORDERALLSOLIDGREY32, .BASOG32,
+.BORDERALLSOLIDGREY33, .BASOG33,
+.BORDERALLSOLIDGREY34, .BASOG34,
+.BORDERALLSOLIDGREY35, .BASOG35,
 {
     border-top-color: #BFBFBF;
 }
